--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -75,6 +75,12 @@
     </Compile>
     <Compile Include="util\emitter-receiver\IReceptor.cs" />
     <Compile Include="util\ModINIs.cs" />
+    <Compile Include="_productos\SearchFilter.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="_productos\SearchFilter.designer.cs">
+      <DependentUpon>SearchFilter.cs</DependentUpon>
+    </Compile>
     <Compile Include="_productos\GridViewFilter2.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -119,6 +125,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="_productos\SearchFilter.resx">
+      <DependentUpon>SearchFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="_productos\GridViewFilter2.resx">
       <DependentUpon>GridViewFilter2.cs</DependentUpon>
