--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -62,7 +62,6 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
-    <Reference Include="WPFToolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -74,7 +73,7 @@
     <Compile Include="util\emitter-receiver\IReceptor.cs" />
     <Compile Include="util\ModINIs.cs" />
     <Compile Include="util\OleDbFunciones.cs" />
-    <Compile Include="util\Utilidades.cs" />
+    <Compile Include="util\Util.cs" />
     <Compile Include="util\xListItem.cs" />
     <Compile Include="_productos\DetalleProducto.xaml.cs">
       <DependentUpon>DetalleProducto.xaml</DependentUpon>
