--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -70,6 +70,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="forms\Login.xaml.cs" />
+    <Compile Include="util\BackgroundTasks\ExistenciaProducto.cs" />
     <Compile Include="_registro\Registration.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
