--- a/ANSv4/CatalogoLibraryVB/My Project/Settings.settings
+++ b/ANSv4/CatalogoLibraryVB/My Project/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" UseMySettingsClassName="true">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="My" GeneratedClassName="MySettings" UseMySettingsClassName="true">
+  <Profiles />
+  <Settings>
+    <Setting Name="CatalogoLibraryVB_VerExistencia_VerExistencia" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsOracle/VerExistencia.asmx</Value>
+    </Setting>
+    <Setting Name="CatalogoLibraryVB_CatalogoWS_Info" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
