--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -71,7 +71,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="forms\Login.xaml.cs" />
+    <Compile Include="forms\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Login.designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="util\BackgroundTasks\BackgroundTaskBase.cs" />
     <Compile Include="util\BackgroundTasks\ExistenciaProducto.cs" />
     <Compile Include="util\IPPrivado.cs" />
@@ -155,10 +160,6 @@
     <Compile Include="_recibos\ucRecibo.Designer.cs">
       <DependentUpon>ucRecibo.cs</DependentUpon>
     </Compile>
-    <Page Include="forms\Login.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="_registro\Registration.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -194,6 +195,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="forms\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\SplashScreenForm.resx">
       <DependentUpon>SplashScreenForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -269,9 +273,6 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logo.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
@@ -302,6 +303,24 @@
     </WebReferenceUrl>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <None Include="recursos\Nuevo-logo-Auto-nautica-blanco.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="recursos\Nuevo-logo-Auto-nautica-horizontal-blanco.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="recursos\Nuevo-logo-Auto-nautica-horizontal-original.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="recursos\Nuevo-logo-Auto-nautica-horizontal-rojo-y-blanco.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="recursos\Nuevo-logo-Auto-nautica-original.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="recursos\Nuevo-logo-Auto-nautica-rojo-y-blanco.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
