Implementacion de envio de informacion al server (aka frmConexionEnvio)

--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -71,6 +71,7 @@
     </ApplicationDefinition>
     <Compile Include="forms\Login.xaml.cs" />
     <Compile Include="util\BackgroundTasks\BackgroundTaskBase.cs" />
+    <Compile Include="util\BackgroundTasks\EnvioMovimientos.cs" />
     <Compile Include="util\BackgroundTasks\ExistenciaProducto.cs" />
     <Compile Include="_registro\Registration.xaml.cs">
       <SubType>Code</SubType>
