--- a/ANSv4/CatalogoLibraryVB/app.config
+++ b/ANSv4/CatalogoLibraryVB/app.config
@@ -36,6 +36,22 @@
             <setting name="CatalogoLibraryVB_CatalogoWS_Info" serializeAs="String">
                 <value>http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx</value>
             </setting>
+            <setting name="CatalogoLibraryVB_PedidosWS_Pedidos" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Pedidos.asmx</value>
+            </setting>
+            <setting name="CatalogoLibraryVB_RecibosWS_Recibos_v_303" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Recibos_v_303.asmx</value>
+            </setting>
+            <setting name="CatalogoLibraryVB_DevolucionWS_Devolucion" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Devolucion.asmx</value>
+            </setting>
+            <setting name="CatalogoLibraryVB_InterDepositoWS_InterDeposito"
+                serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/InterDeposito.asmx</value>
+            </setting>
+            <setting name="CatalogoLibraryVB_RendicionWS_Rendicion" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Rendicion.asmx</value>
+            </setting>
         </CatalogoLibraryVB.My.MySettings>
     </applicationSettings>
 </configuration>
