--- a/ANSv4/CatalogoLibraryVB/My Project/Settings.settings
+++ b/ANSv4/CatalogoLibraryVB/My Project/Settings.settings
@@ -8,5 +8,20 @@
     <Setting Name="CatalogoLibraryVB_CatalogoWS_Info" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx</Value>
     </Setting>
+    <Setting Name="CatalogoLibraryVB_PedidosWS_Pedidos" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Pedidos.asmx</Value>
+    </Setting>
+    <Setting Name="CatalogoLibraryVB_RecibosWS_Recibos_v_303" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Recibos_v_303.asmx</Value>
+    </Setting>
+    <Setting Name="CatalogoLibraryVB_DevolucionWS_Devolucion" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Devolucion.asmx</Value>
+    </Setting>
+    <Setting Name="CatalogoLibraryVB_InterDepositoWS_InterDeposito" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/InterDeposito.asmx</Value>
+    </Setting>
+    <Setting Name="CatalogoLibraryVB_RendicionWS_Rendicion" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Rendicion.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
